--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,13 @@ scikit-learn>=1.3.0
 python-dateutil>=2.8.0
 pyyaml>=6.0
 
+# Backend API
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+websockets>=12.0
+python-multipart>=0.0.6
+pydantic>=2.5.0
+
 # Development
 pytest>=7.4.0
 black>=23.0.0
