--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,15 @@ scipy>=1.11.0
 # rPPG Pipeline
 open-rppg==0.1.1
 
-# Audio processing (HeAR)
+# Audio processing (HeAR + Cry)
 librosa>=0.10.0
 soundfile>=0.12.0
 torch>=2.0.0
 torchaudio>=2.0.0
+
+# Hugging Face models (HeAR, AST, HuBERT)
+transformers>=4.35.0
+huggingface-hub>=0.19.0
 
 # MedGemma for clinical interpretation (MLX optimized for Apple Silicon)
 mlx>=0.0.8
@@ -19,6 +23,7 @@ mlx-lm>=0.0.9
 # Data handling
 pandas>=2.0.0
 scikit-learn>=1.3.0
+joblib>=1.3.0
 
 # Utilities
 python-dateutil>=2.8.0
