--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ huggingface-hub>=0.19.0
 # VGA Skin Classification (MedGemma LoRA adapter, CUDA/CPU)
 peft>=0.18.0
 bitsandbytes>=0.46.0
+torchvision>=0.15.0
+Pillow>=10.0.0
 
 # MedGemma for clinical interpretation (MLX optimized for Apple Silicon)
 mlx>=0.0.8
